syntax = "proto3";
package hbb;

message RegisterPeer {
  string hbb_addr = 1;
}

message PeekPeer {
  string hbb_addr = 1;
}

message PeekPeerResponse {
  bytes socket_addr = 1;
}

message Message {
  oneof union {
    RegisterPeer register_peer = 6;
    PeekPeer peek_peer = 7;
    PeekPeerResponse peek_peer_response = 8;
  }
}
